EDAN01/minizinc-1.6/tests/flattening/test-mzn2fzn/setin.x.4.exp
m2f: error: 
m2f:   setin.x.4.dzn:1 
m2f:   In assignment for 'x2'. 
m2f:   Value is out of range.
