EDAN01/minizinc-1.6/tests/flattening/test-mzn2fzn/setin.mzn
var int: x1;
var set of 1..3: x2;
constraint x1 in x2;
solve satisfy;
